Actions
Bug #8670
closedIncorrect comments in DLS Rx functions
Start date:
2017-09-21
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
There are several incorrect comments in the DLS Rx functions. Eric Cheng changed their behavior (in 2008) but failed to update the comments. Specifically, the i_dls_link_rx()
and i_dls_link_rx_func()
claim to use the SAP + VID for the hash key but only the SAP is used.
Updated by Electric Monk almost 5 years ago
- Status changed from New to Closed
git commit 0b0eb2f5d8243c8a1c87a28d13c3caebd85bd584
commit 0b0eb2f5d8243c8a1c87a28d13c3caebd85bd584 Author: Ryan Zezeski <rpz@joyent.com> Date: 2017-10-16T17:21:52.000Z 8670 Incorrect comments in DLS Rx functions Reviewed by: Robert Mustacchi <rm@joyent.com> Reviewed by: Yuri Pankov <yuripv@gmx.com> Approved by: Richard Lowe <richlowe@richlowe.net>
Actions